# img_to_str

./: README.md  pyproject.toml  rocket.txt  test.txt
src/img_to_str/: img_to_str.py
src/img_to_str.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
